[package]
name = "secm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
dirs = "5.0"
clipboard = "0.5"
unicode-width = "0.1"

# https://cloud.tencent.com/developer/article/1973805
tui = "0.17"
crossterm = "0.22"
