[package]
name = "secm"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.27.0"
security-framework = "2.9.2"
rust-crypto = "0.2.36"
clipboard = "0.5"
rand = "0.8"
dirs = "5.0"
unicode-width = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.29.0"